refactor sapo